--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>RCS_UserSupport_public - RCS_UserSupport_public</title>
-  <link rel="shortcut icon" href="/RCS_UserSupport_public/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/RCS_UserSupport_public/docs/assets/css/just-the-docs-default_bb.css">
-  <script type="text/javascript" src="/RCS_UserSupport_public/docs/assets/js/vendor/lunr.min.js"></script>
-  <script type="text/javascript" src="/RCS_UserSupport_public/docs/assets/js/just-the-docs.js"></script>
+  <title>RCS-UserSupport-public</title>
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="assets/css/just-the-docs-default_bb.css">
+  <script type="text/javascript" src="assets/js/vendor/lunr.min.js"></script>
+  <script type="text/javascript" src="assets/js/just-the-docs.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Begin Jekyll SEO tag v2.8.0 -->
+
+<!-- Begin Jekyll SEO tag v2.8.0
   <title>RCS UserSupport (publ1c) </title>
-    <!-- | collating bits and pieces for a more effective support to 21st century users</title> -->
+    | collating bits and pieces for a more effective support to 21st century users</title>
   <meta name="generator" content="Jekyll v3.9.2">
   <meta property="og:title" content="RCS_UserSupport_public">
   <meta property="og:locale" content="en_UK">
@@ -35,7 +36,9 @@
       "url": "https://imperialcollegelondon.github.io/RCS_UserSupport_public/"
     }
   </script>
-<!-- End Jekyll SEO tag -->
+
+ End Jekyll SEO tag -->
+
 </head>
 
   <body></body>
