--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>RCS-UserSupport-public</title>
-  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="assets/css/just-the-docs-default_bb.css">
-  <script type="text/javascript" src="assets/js/vendor/lunr.min.js"></script>
-  <script type="text/javascript" src="assets/js/just-the-docs.js"></script>
+  <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/assets/css/just-the-docs-default_bb.css">
+  <link rel="stylesheet" href="/RCS_UserSupport_public/docs/_sass/custom/styles.css">
+  <!-- <script type="text/javascript" src="/assets/js/vendor/lunr.min.js"></script> -->
+  <!-- <script type="text/javascript" src="/assets/js/just-the-docs.js"></script> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
 
 <!-- Begin Jekyll SEO tag v2.8.0
   <title>RCS UserSupport (publ1c) </title>
