website layout test_6

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <h1> testing custom footer</h1>
-
+    <p>ALL CREDITS and KUDOS to all the respective authors, for the great and brilliant collection of material provided.</p>
   </body>
 </html>
 
