--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -5,6 +5,10 @@
   </head>
   <body>
     <p>ALL CREDITS and KUDOS to all the respective authors, for the great and brilliant collection of material provided.</p>
+    <br>
+    <form action="https://github.com/ImperialCollegeLondon/RCS_UserSupport_public/">
+      <input type="submit" name="button1" value="GitHub!">
+    </form>
   </body>
 </html>
 
