--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -4,10 +4,10 @@
     <title></title>
   </head>
   <body>
-    <p>ALL CREDITS and KUDOS to all the respective authors, for the great and brilliant collection of material provided.</p>
+    <p>All CREDITS and KUDOS go to all the respective authors, for the great and brilliant collection of material and documentation provided.</p>
     <br>
     <form action="https://github.com/ImperialCollegeLondon/RCS_UserSupport_public/">
-      <input type="submit" name="button1" value="GitHub!">
+      Check out the source of this Repo on  <input type="submit" name="button1" value="GitHub!">
     </form>
   </body>
 </html>
