website layout test_9

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -9,6 +9,24 @@
     <form action="https://github.com/ImperialCollegeLondon/RCS_UserSupport_public/">
       Check out the source of this Repo on  <input type="submit" name="button1" value="GitHub!">
     </form>
+
+    <br>
+
+    <button class="btn js-toggle-dark-mode">Dark mode</button>
+
+    <script type="text/javascript">
+        const toggleDarkMode = document.querySelector('.js-toggle-dark-mode');
+        jtd.addEvent(toggleDarkMode, 'click', function(){
+          if (jtd.getTheme() === 'dark') {
+            jtd.setTheme('light');
+            toggleDarkMode.textContent = 'Dark mode';
+          } else {
+            jtd.setTheme('dark'); toggleDarkMode.textContent = 'Light mode';
+           }
+        });
+    </script>
+
+
   </body>
 </html>
 
