website layout test_17_revertJS

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,4 +1,4 @@
-<html lang="en" dir="ltr">
+<!-- <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
 <script>
@@ -22,4 +22,4 @@
 
 </script>
   </head>
-</html>
+</html> -->
