--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -13,6 +13,12 @@
       // document.cookie = jtd.getTheme();
       // document.cookie = "isDark=false";
 
+      if (document.cookie.split(';').some((item) => item.includes("isDark=true"))) {
+          jtd.setTheme('dark');
+      } else {
+        jtd.setTheme('light');
+      };
+
         const toggleDarkMode = document.querySelector('.js-toggle-dark-mode');
 
         jtd.addEvent(toggleDarkMode, 'click', function(){
