website layout test_21_revertJS

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -12,12 +12,12 @@
     <script type="text/javascript">
       // document.cookie = jtd.getTheme();
       // document.cookie = "isDark=false";
-
-      if (document.cookie.split(';').some((item) => item.includes("isDark=true"))) {
-          jtd.setTheme('dark');
-      } else {
-        jtd.setTheme('light');
-      };
+      // 
+      // if (document.cookie.split(';').some((item) => item.includes("isDark=true"))) {
+      //     jtd.setTheme('dark');
+      // } else {
+      //   jtd.setTheme('light');
+      // };
 
         const toggleDarkMode = document.querySelector('.js-toggle-dark-mode');
 
